<resources>
    <string name="app_name">Bendita Aliados</string>
    <string name="action_settings">Settings</string>

    <string name="login_social_media_subtitle">login using social media</string>
    <string name="login_social_media_title">OR</string>
    <string name="login_button">LOGIN</string>
    <string name="login_password_hint">Password</string>
    <string name="login_username_hint">Username</string>
    <string name="action_users">Aliados</string>
    <string name="action_calendar">Calendario</string>
    <string name="action_boats">Lanchas</string>
    <string name="action_invoice">Servicios</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_reservation">ReservationActivity</string>

    <string name="add_cliente">Nuevo Cliente</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Nombre de la agencia</string>
    <string name="document">Nit</string>
    <string name="phone">Telefono</string>
    <string name="cellphone">Celular</string>
    <string name="contact_title">Contacto</string>
    <string name="address">Direccion</string>
    <string name="person">Encargado</string>
    <string name="add">ADD</string>
    <string name="add_boat">Nuevo Barco</string>
    <string name="captain">Capitan</string>
    <string name="marine">Marino</string>
    <string name="boat_input">Lancha</string>
    <string name="capacity">Cupo</string>
    <string name="title_activity_service_add">ServiceAddActivity</string>
    <string name="add_service">Nuevo servicio</string>
    <string name="service_name">Nombre</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="service_success">Servicio guardado con exito</string>
    <string name="min_price">Precio minimo adultos</string>
    <string name="sugest_price">Precio sugerido adultos</string>
    <string name="boats">Lanchas</string>
    <string name="select_boats">Seleccionar Lanchas</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="sugest_price_child">Precio sugerido niños</string>
    <string name="min_price_child">Precio minimo niños</string>
    <string name="email_body">
        Su reserva a sido confirmada para el %1s\n
        Sitio de Partida: Muelle de la Bodeguita\n
        Hora de Registro en Muelle: 8am\n
        Hora de Zarpe: 9am\n
    </string>
</resources>
