<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="co.com.barcos.barcosadmin.MainActivity">
    <item
        android:id="@+id/action_users"
        android:title="@string/action_users"
        android:icon="@drawable/ic_users"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_services"
        android:title="@string/action_calendar"
        android:icon="@drawable/ic_calendar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_boats"
        android:title="@string/action_boats"
        android:icon="@drawable/ic_boat"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_bills"
        android:title="@string/action_invoice"
        android:icon="@drawable/ic_invoice"
        app:showAsAction="ifRoom" />
</menu>
