<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        tools:context=".LoginActivity"
        tools:ignore="UnusedAttribute">

    <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:importantForAccessibility="no"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@id/form"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bg"
                android:orientation="vertical"
                android:padding="16dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_user"
                        android:tint="#707070"/>

                <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:background="#00ffffff"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/login_username_hint"
                        android:inputType="textEmailAddress"
                        android:importantForAutofill="no"/>
            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0.4dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/gray"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_locked"
                        android:tint="#707070"/>

                <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:background="#00ffffff"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/login_password_hint"
                        android:inputType="textPassword"
                        android:importantForAutofill="no"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_bg"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/login_button"
                android:textColor="#fff"/>
    </LinearLayout>


    <LinearLayout
            android:id="@+id/or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@id/form"
            app:layout_constraintBottom_toTopOf="@id/social_media">

        <View
                android:layout_width="0px"
                android:layout_height="0.4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="#707070"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/login_social_media_title"
                android:textColor="@color/gray"/>

        <View
                android:layout_width="0px"
                android:layout_height="0.4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="#707070"/>
    </LinearLayout>

    <TextView
            android:id="@+id/subtitle"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/login_social_media_subtitle"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/or"/>

    <LinearLayout
            android:id="@+id/social_media"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="26dp"
            app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
                android:id="@+id/fbBtn"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_fb"
                android:importantForAccessibility="no"/>

        <ImageView
                android:id="@+id/twitterBtn"
                android:layout_width="0px"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:src="@drawable/ic_twitter"
                android:importantForAccessibility="no"/>

        <ImageView
                android:id="@+id/googleBtn"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_google"
                android:importantForAccessibility="no"/>
    </LinearLayout>

    <FrameLayout
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#c6ffffff"
            android:visibility="gone">
        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
    </FrameLayout>
</android.support.constraint.ConstraintLayout>