<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:id="@+id/calendarHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center">

            <ImageView
                    android:id="@+id/calendar_prev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:contentDescription="@null"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:src="@drawable/calendario_flecha_izq"/>

            <TextView
                    android:id="@+id/calendar_indicator"
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:textColor="@android:color/white"/>

            <ImageView
                    android:id="@+id/calendar_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:contentDescription="@null"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:src="@drawable/calendario_flecha_der"/>
        </LinearLayout>


        <com.github.sundeepk.compactcalendarview.CompactCalendarView
                android:id="@+id/calendar"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:compactCalendarCurrentDayBackgroundColor="#b3b3b3"
                app:compactCalendarCurrentDayTextColor="@android:color/white"
                app:compactCalendarCurrentSelectedDayBackgroundColor="@color/colorPrimary"
                app:compactCalendarCurrentSelectedDayTextColor="@android:color/white"
                app:compactCalendarMultiEventIndicatorColor="@color/colorAccent"
                app:compactCalendarShouldSelectFirstDayOfMonthOnScroll="false"
                app:compactCalendarTargetHeight="270dp"
                app:compactCalendarTextSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/calendarHeader"/>

        <LinearLayout
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calendar">

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/seperator_gray"/>

            <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/sugest_price"/>

            <TextView
                    android:id="@+id/sugestPriceText"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif"
                    tools:text="$100,000"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/seperator_gray"/>

            <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/sugest_price_child" />

            <TextView
                    android:id="@+id/sugestPriceChildText"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif"
                    tools:text="$100,000" />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/seperator_gray" />

            <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/min_price"/>

            <TextView
                    android:id="@+id/minPriceText"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif"
                    tools:text="$100,000"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/seperator_gray"/>

            <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/min_price_child" />

            <TextView
                    android:id="@+id/minPriceChildText"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif"
                    tools:text="$100,000" />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/seperator_gray" />

            <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/boats"/>

            <TextView
                    android:id="@+id/selectedBoats"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif"
                    tools:text="$100,000"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/seperator_gray"/>

            <TextView
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/capacity"/>

            <TextView
                    android:id="@+id/capacityText"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif"
                    tools:text="$100,000"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/seperator_gray"/>
        </LinearLayout>

        <TextView
                android:id="@+id/no_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No hay reservas disponibles para este dia"
                app:layout_constraintTop_toBottomOf="@id/calendar"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>